# OpenDrop-VJ

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  progress.md  vite.config.js  vitest.config.ts
.github/workflows/: release.yml
assets/presets/: 11.milk  158.milk  185.milk  27_super_goats - have you ever been knocked out before, sunshine..milk  36.milk  414 bowel rebranding pr whore skinned to the teeth shader serial killer common glut.milk  414 bowel rebranding pr whore skinned to the teeth shader serial killer.milk  86.milk  93.milk  Adam Fx 2 Zylot - Age of Science Fierceness 16 - mash0000 - gerber full heaving baby.milk  Adam Fx 2 Zylot - Age of Science Fierceness BEAST2 - mash0000 - ethics is for weiner dogs.milk  AdamFX 2 Geiss - Mash-Up - Angelic  Staine Glass Chapters 6.milk  AdamFX 2 Geiss - Mash-Up - Angelic  Staine Glass Chapters 6_1.milk  AdamFX 2 Geiss - Mash-Up - Angelic Spike Living Stained Glass Chapters.milk  AdamFX 2 Geiss - Mash-Up Sphere Xibit Graffiti Warp me Tydye6.milk  AdamFX 2 Geiss - Mash-Up Sphere Xibit Graffiti Warp me Tydye7.milk  AdamFX Mashup 2 Martin - reflections on black tile + Raron N Flexi .milk  AdamFx 2 Aderrasi - Airhandler (Last Breath - Calm)Ilusional Discontent2.milk  Aderrasi - Songflower (Moss Posy).milk  Che - Terracarbon Stream.milk  Che - Watch & Fly.milk  EMPR - Random - Look mama I'm on TV! 2.milk  EoS and PieturP - Starfield.milk  EoS+Phat Cool Bug_arm.milk  EoS+Phat Cool Bug_arm_textured.milk  EoS+Phat Fractical_dancer - pulsate B.milk  EoS+Phat Fractical_dancer - pulsate box_mix.milk  EoS+Phat Fractical_dancer_Peacock.milk  Fvese & Idiot24-7 - Rearview Mirror.milk  Fvese - 0 To 60.milk  Fvese - Multi Circle.milk  Fvese - Quicksand.milk  Geiss - Swirlie 5.milk  Geiss and Rovastar - The Chaos Of Colours (sprouting dimentia mix).milk  Idiot & Zylot - Unhealthy Love (Idiot's STDs Mix).milk  Idiot - Texture Boxes (Remix 2).milk  Idiot - Texture Boxes (Remix).milk  Illusion & Rovastar - Clouded Bottle.milk  Illusion & Unchained - Frozen Eye 1.milk  Illusion & Unchained - Invade My Mind.milk  (+71 more)
crates/opendrop-core/: Cargo.toml
crates/opendrop-core/src/: lib.rs
crates/opendrop-core/src/audio/: capture.rs  mod.rs  pipewire.rs  ring_buffer.rs
crates/opendrop-core/src/deck/: mod.rs
crates/opendrop-core/src/midi/: mapping.rs  mod.rs  persistence.rs
crates/opendrop-core/src/render/: mod.rs  window.rs
crates/opendrop-core/src/video/: mod.rs  ndi.rs  output.rs  spout.rs  v4l2.rs
crates/opendrop-renderer/: Cargo.toml
crates/opendrop-renderer/src/: main.rs
crates/projectm-rs/: Cargo.toml
crates/projectm-rs/src/: error.rs  instance.rs  lib.rs  preset.rs
crates/projectm-sys/: Cargo.toml  build.rs  wrapper.h
crates/projectm-sys/src/: lib.rs
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/lib/components/: AudioPanel.svelte  CrossfaderPanel.svelte  DeckMiniCard.svelte  DeckPanel.svelte  Header.svelte  MidiPanel.svelte  PlaylistPanel.svelte  PresetBrowser.svelte  PresetCard.svelte  SettingsPanel.svelte  StatusIndicator.svelte  VideoOutputPanel.svelte  VuMeter.svelte
src/lib/stores/: accent.svelte.ts  accent.ts  categories.svelte.ts  categories.ts  favorites.svelte.ts  favorites.ts  settings.svelte.ts  tags.svelte.ts  tags.ts  theme.svelte.ts  theme.ts  toast.svelte.ts  toast.ts
src/routes/: +page.svelte
src/tests/: setup.ts
src/tests/components/: AudioPanel.test.ts  CrossfaderPanel.test.ts  DeckMiniCard.test.ts  DeckPanel.test.ts  Header.test.ts  MidiPanel.test.ts  PlaylistPanel.test.ts  PresetBrowser.test.ts  PresetCard.test.ts  VideoOutputPanel.test.ts
