[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/opendrop-core",
    "crates/opendrop-renderer",
    "crates/projectm-rs",
    "crates/projectm-sys",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["OpenDrop Contributors"]

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }
crossbeam-channel = "0.5"

# Audio
cpal = "0.17"
ringbuf = "0.4"
midir = "0.10"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Graphics
gl = "0.14"
glutin = "0.32"
glutin-winit = "0.5"
winit = "0.30"
raw-window-handle = "0.6"

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
tempfile = "3"
