[package]
name = "opendrop-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for OpenDrop VJ visualizer"

[dependencies]
# Internal crates
projectm-rs = { path = "../projectm-rs" }

# Workspace dependencies
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
crossbeam-channel.workspace = true
cpal.workspace = true
ringbuf.workspace = true
midir.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
gl.workspace = true
glutin.workspace = true
glutin-winit.workspace = true
winit.workspace = true
raw-window-handle.workspace = true
uuid.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile.workspace = true

# Video output - Linux v4l2loopback
[target.'cfg(target_os = "linux")'.dependencies]
v4l = "0.14"
libc = "0.2"

# Audio - Linux PipeWire native
pipewire = "0.8"
libspa = "0.8"

# Video output - Windows Spout
[target.'cfg(target_os = "windows")'.dependencies]
libloading = "0.8"

# Video output - NDI (cross-platform)
[dependencies.grafton-ndi]
version = "0.2"
optional = true

[features]
default = []
ndi = ["grafton-ndi"]
